--- a/sample.cfg
+++ b/sample.cfg
@@ -8,13 +8,12 @@ host = 'cloudio-data.esr.ch'
 port = 8883
 
 #username MUST match endpoint name
-username = 'FEMS1'
+username = 'cs-pusher'
 password = ''
 ca = 'certs/ca-cert.pem'
 cert = 'certs/sample-cert.pem'
 key = 'certs/sample-key.pem'
 
-
 # endpoint name MUST match CN in certificate!
 [endpoint]
-name = FEMS1
+name = cs-pusher
